# SmallGraphicsLayer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt  sokol.mm
examples/clear_sapp/: main.cpp
examples/clear_sdl3/: CMakeLists.txt  main.cpp
examples/hello_sdl3/: CMakeLists.txt  main.cpp
examples/sapp/: sokol.mm
examples/sapp/clear/: CMakeLists.txt  main.cpp
examples/sapp/clear_sapp/: CMakeLists.txt
examples/sdl3/clear/: CMakeLists.txt  PREVIEW.md  README.md  main.cpp
examples/sdl3/clear_sdl3/: CMakeLists.txt
examples/sdl3/fragment/: CMakeLists.txt  fragment.glsl  main.cpp
examples/sdl3/instance/: CMakeLists.txt  README.md  main.cpp
examples/sdl3/instance/resources/: CREDITS.txt
examples/sdl3/program/: CMakeLists.txt  PREVIEW.md  README.md  fire.frag  flame.frag  main.cpp
examples/sdl3/sprite/: CMakeLists.txt  PREVIEW.md  README.md  main.cpp
examples/sdl3/sprite_sdl3/: CMakeLists.txt  main.cpp
examples/sdl3/triangle/: CMakeLists.txt  PREVIEW.md  README.md  main.cpp
examples/sdl3/triangle_sdl3/: CMakeLists.txt  main.cpp
examples/triangle_sdl3/: main.cpp
include/SGL/: AssetManager.hpp  Log.hpp  Math.hpp  SmallGraphicsLayer.hpp  Utils.hpp
include/SGL/genshaders/: attributes.glsl.h  instance.glsl.h  sprite.glsl.h  ssprite.glsl.h
shaders/: attributes.glsl  instance-tex.glsl  ssprite.glsl
src/: AssetManager.cpp  Log.cpp  SmallGraphicsLayer.cpp  sokol_gfx_impl.cpp  sokol_impl.mm  vendor_impl.cpp  vendor_impl.mm
