cmake_minimum_required(VERSION 3.29)

if (SGL_BACKEND_SDL3)
    add_subdirectory(vendor/SDL EXCLUDE_FROM_ALL)
    add_subdirectory(clear_sdl3)
    add_subdirectory(triangle_sdl3)
elseif (SGL_BACKEND_SAPP)
    include_directories(${CMAKE_CURRENT_SOURCE_DIR}/vendor/sokol)
    add_subdirectory(clear_sapp)
endif()
