cmake_minimum_required(VERSION 3.29)

if (SGL_BACKEND_SDL3)
    add_subdirectory(vendor/SDL EXCLUDE_FROM_ALL)
    add_subdirectory(sdl3/clear)
    add_subdirectory(sdl3/triangle)
    add_subdirectory(sdl3/sprite)
    add_subdirectory(sdl3/instance)
elseif (SGL_BACKEND_SAPP)
    include_directories(${CMAKE_CURRENT_SOURCE_DIR}/vendor/sokol)
    add_subdirectory(sapp/clear)
endif()
